scrollbars bugs solved

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,46 +11,40 @@ body {
   padding: 0px;
 }
 
-#top {
-  position: absolute;
-}
-
-* html #container {
-  height: 100%;
-}
-
-#container {
+#top_wrapper {
   min-height: 100%;
-  width: 800px;
-  margin-bottom: -36px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 20px;
+  height: auto !important;
+  margin: 0 0 -2em 0;
 }
 
-#footer_spacer {
-  height: 36px;
+#middle_wrapper {
+	width: 800px;
+  margin: 0 auto 0 auto;
+}
+
+#footer_spacer, #footer {
+  height: 2em;
 }
 
 #footer {
-  text-align: center;
-  font-size: 60%;
   width: 100%;
-  clear: both;
-  padding: 10px;
   background-color: #fab30e;
-  border-top: 1px solid black;
-  height: 15px;
+}
+
+#footer p {
+	text-align: center;
+  font-size: 0.7em;
+	padding-top: 1em;
 }
 
 #header {
   text-align: right;
-  font-size: 80%;
+  font-size: 0.8em;
   background-color: #fab30e;
-  padding: 1em;
-  width: 100%;
   border-bottom: 1px solid black;
-  height: 15px;
+	width: 100%;
+  height: 2em;
+  padding-top: 1em;
 }
 
 #header span {
@@ -102,6 +96,7 @@ a:focus {
   position: relative;
   border: 5px solid #e0e0e0;
   width: 500px;
+  margin-left: 220px;
 }
 
 #about {
@@ -110,7 +105,7 @@ a:focus {
 }
 
 #quiz_wrapper {
-  width: 100%;
+	width: 100%;
 }
 
 #quiz_wrapper h1 {
